@@ -3,6 +3,8 @@
   * Added ability to find image buttons by src
   * Added ability to find image buttons by alt
   * Added first_row and last_row methods to table
+  * Added new module PagePopulator with single method populate_page_with
+  * Added deprecation warning to the method_missing method on Element.
 === 2016-08-02
 * Enhancements
   * Added all of the h5 locators
